--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nevinny-store",
+  "name": "Velvet-essence",
   "version": "1.0.0",
   "description": "Velvet Essence - Online Wine Store",
   "author": "Manuel Dinis Júnior",
